0.3.5
- sql:
    - the value of "case_sensitive" defaults to True now, regardless of the
      casing of the identifier, unless specifically set to False. this is
      because the object might be label'ed as something else which does
      contain mixed case, and propigating "case_sensitive=False" breaks that.
      Other fixes to quoting when using labels and "fake" column objects
    - added a "supports_execution()" method to ClauseElement, so that
      individual kinds of clauses can express if they are appropriate for
      executing...such as, you can execute a "select", but not a "Table" or a
      "Join".
    - fixed argument passing to straight textual execute() on engine,
      connection. can handle *args or a list instance for positional, **kwargs
      or a dict instance for named args, or a list of list or dicts to invoke
      executemany()
    - small fix to BoundMetaData to accept unicode or string URLs
    - fixed named PrimaryKeyConstraint generation [ticket:466] courtesy
      andrija at gmail
    - fixed generation of CHECK constraints on columns [ticket:464]
    - fixes to tometadata() operation to propigate Constraints at column and
      table level
- oracle:
    - when returning "rowid" as the ORDER BY column or in use with ROW_NUMBER
      OVER, oracle dialect checks the selectable its being applied to and will
      switch to table PK if not applicable, i.e. for a UNION. checking for
      DISTINCT, GROUP BY (other places that rowid is invalid) still a TODO.
      allows polymorphic mappings to function, [ticket:436]
    - sequences on a non-pk column will properly fire off on INSERT
    - added PrefetchingResultProxy support to pre-fetch LOB columns when they
      are known to be present, fixes [ticket:435]
    - implemented reflection of tables based on synonyms, including across
      dblinks [ticket:379]
    - issues a log warning when a related table cant be reflected due to
      certain permission errors [ticket:363]
- mysql: