@@ -1,3 +1,8 @@
+- orm:
+    - a full select() construct can be passed to query.select() (which
+      worked anyway), but also query.selectfirst(), query.selectone() which
+      will be used as is (i.e. no query is compiled). works similarly to
+      sending the results to instances().
 0.3.5
 - sql:
     - the value of "case_sensitive" defaults to True now, regardless of the
